--- a/3.Implementation_of_DVC.tex
+++ b/3.Implementation_of_DVC.tex
@@ -465,7 +465,7 @@ Effect of this property of washout filter is observed in the active and reactive
 % \end{figure}
 
 \section{DIgSILENT PowerFactory Software}
-PowerFactory is a software tool developed by DIgSILENT (Germany) that is used for RMS and EMT simulations. It has three integration characteristics; functional integration, vertical integration and database integration. Functional integration explains that PowerFactory is a single executable program and vertical integration means that the models in the power system can exchange all of the analysis functions at one place. PowerFactory uses a Data Manager for database integration that allows all models to be stored under one project file. There are two libraries available in PowerFactory; Global and Project libraries. There are two subsections available within the Project library. They are \cite{powerfactory_tech}:
+PowerFactory is a software tool developed by DIgSILENT (Germany) that is used for RMS and \gls{EMT} simulations. It has three integration characteristics; functional integration, vertical integration and database integration. Functional integration explains that PowerFactory is a single executable program and vertical integration means that the models in the power system can exchange all of the analysis functions at one place. PowerFactory uses a Data Manager for database integration that allows all models to be stored under one project file. There are two libraries available in PowerFactory; Global and Project libraries. There are two subsections available within the Project library. They are \cite{powerfactory_tech}:
 \begin{itemize}
     \item Equipment Type Library
     \item User Defined Models
